Maintenance: Various Fixes & Updates (#183)
* Fix: Workspace title truncation

https://github.com/astronomer/issues/issues/547

* Update: Route to /login when !publicSignups

https://github.com/astronomer/issues/issues/546

* Fix: add email validation to billing email form

https://github.com/astronomer/issues/issues/509

* Update: add image version `deployInfo.current` to dep config tags

https://github.com/astronomer/issues/issues/477

* Fix: Lint

Those pesky semicolons.

--- a/src/instruments/menus/Level1/styles.scss
+++ b/src/instruments/menus/Level1/styles.scss
@@ -22,8 +22,6 @@
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
-    max-width: 22vw;
-    text-overflow: ellipsis;
     padding: 0.2rem; //to prevent the Workspace title from getting cut off int he app.
   }
 
